# RichmanRL

./: .gitignore  README.md  pyproject.toml  setup.toml
HexEnv/HexEnv/env/: HexEnv.py  pygame_trial.py  test_hex.py
RichmanRL/: __init__.py  main.py
RichmanRL/TTT_DP/: TTT.py  __init__.py  dp.py  env.py  monte_carlo.py  n_step_bootstrap.py
RichmanRL/algs/: __init__.py  reinforce.py  theoretical_Hex.py  typing_utils.py
RichmanRL/alpha_zero_general/: Arena.py  Game.py  __init__.py  coach.py  main.py
RichmanRL/alpha_zero_general/hex/: hex_game.py
RichmanRL/alpha_zero_general/hex/pytorch/: HexNNet.py  NNet.py
RichmanRL/envs/: HexEnv.py  __init__.py  richman_env.py  typing_utils.py
RichmanRL/utils/: __init__.py  conv_net.py  evaluation.py  functions.py  human.py  mlp.py  nn_policy.py  policy.py  scoring.py  types.py
alpha-zero-general/: Coach.py  Game.py  MCTS.py  main.py
alpha-zero-general/hex/pytorch/: HexNNet.py
saved_models/policies/: REINFORCE_BIDDING.pkl  REINFORCE_BIDDING_TTT.pkl  REINFORCE_GAME.pkl  REINFORCE_GAME_TTT.pkl  REINFORCE_policy.pkl  TTT_n_step_policy.pkl
scripts/policy_gradient/: config.yaml  unsimplified.py
tests/: __init__.py
tests/algs/: __init__.py  test_reinforce.py
tests/envs/: __init__.py  test_hex.py  test_tictactoe.py
tests/utils/: __init__.py  test_policy.py
